--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Jade - Intro to ES6</h1>
     <h2>Week 3 - Monday - Dec. 22nd, 2020</h2>
     <h3>Lab Exercises: Destructuring - Rest - Spread - and Arrow Function</h3>
+    <h4>Details in console</h4>
     <script src="assignment1.js"></script>
     <script src="assignment2.js"></script>
     <script src="assignment3.js"></script>
